--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
   <h2>Generate a Password</h2>
   
-  <form>
+  <!-- <form>
     <div class="form-group">
       <label for="pass Length">Password Length</label>
       <input type="number" class="form-control" id="passLength" placeholder="from 8 to 128">
@@ -39,7 +39,7 @@
       <input type="checkbox" class="form-check-input" id="passSpecial" value="true">
       <label class="form-check-label" for="exampleCheck1">Special Characters</label>
     </div>
-    </form>
+    </form> -->
 
     <button id="generate">Generate Password</button>
     <button id="copy">Copy to Clipboard</button>
