--- a/index.html
+++ b/index.html
@@ -17,38 +17,44 @@
     <h1>Password Generator</h1>
   </header>
   <h2>Generate a Password</h2>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card" style="width: 30rem; margin: 20px auto; padding: 20px">
 
-  <form>
-    <div class="form-group">
-      <label for="checkLength">Password Length</label>
-      <input type="text" class="form-control" id="checkLength" placeholder="from 8 to 128">
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="checkLowerCase" > 
-      <label class="form-check-label" for="checkLowerCase">Lowercase Letters</label>
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="checkUpperCase" >
-      <label class="form-check-label" for="checkUpperCase">Uppercase Letters</label>
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="checkNum" >
-      <label class="form-check-label" for="checkNum">Numbers</label>
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="checkSpecial" >
-      <label class="form-check-label" for="checkSpecial">Special Characters</label>
-    </div>
-    </form>
 
-  <button id="generate">Generate Password</button>
-  <br>
-  </br>
-  <button id="copy">Copy to Clipboard</button>
-  <br>
-  </br>
-  <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
 
+        <form>
+          <div class="form-group">
+            <label for="checkLength">Password Length</label>
+            <input type="text" class="form-control" id="checkLength" placeholder="from 8 to 128">
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="checkLowerCase">
+            <label class="form-check-label" for="checkLowerCase">Lowercase Letters</label>
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="checkUpperCase">
+            <label class="form-check-label" for="checkUpperCase">Uppercase Letters</label>
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="checkNum">
+            <label class="form-check-label" for="checkNum">Numbers</label>
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="checkSpecial">
+            <label class="form-check-label" for="checkSpecial">Special Characters</label>
+          </div>
+        </form>
+        <br>
+        <button id="generate">Generate Password</button>
+        <br>
+        <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
+        <br>
+        <button id="copy">Copy to Clipboard</button>
+
+      </div>
+    </div>
+  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
