--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <form>
           <div class="form-group">
             <label for="checkLength">Password Length</label>
-            <input type="text" class="form-control" id="checkLength" placeholder="from 8 to 128">
+            <input type="number" class="form-control" id="checkLength" placeholder="from 8 to 128" min=8 max=128>
           </div>
           <div class="form-check">
             <input type="checkbox" class="form-check-input" id="checkLowerCase">
