--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <form>
           <div class="form-group">
             <label for="checkLength">Password Length</label>
-            <input type="number" class="form-control" id="checkLength" placeholder="from 8 to 128" min=8 max=128>
+            <input type="number" class="form-control" id="checkLength" placeholder="from 8 to 128">
           </div>
           <div class="form-check">
             <input type="checkbox" class="form-check-input" id="checkLowerCase">
@@ -66,7 +66,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-  <script src="script copy 2.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
